force-app/main/default/objects/Season__c/Season__c.object-meta.xml
<CustomObject>
    <label>Season</label>
    <nameField>
        <label>Season Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Seasons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>