force-app/main/default/objects/Season__c/fields/TV_Serie__c.field-meta.xml
<CustomField>
    <fullName>TV_Serie__c</fullName>
    <label>TV Serie</label>
    <referenceTo>TV_Serie__c</referenceTo>
    <relationshipLabel>Seasons</relationshipLabel>
    <relationshipName>Seasons</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>